# gamepad-desktop-bridge

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  controller_config_example.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: linux.yml  macos.yml  release.yml  windows.yml
include/: config_manager.h  gamepad_controller.h  input_simulator.h  media_controller.h
scripts/: build.sh  package-binary.sh  package-source.sh
src/: config_manager.cpp  gamepad_controller.cpp  input_simulator.cpp  main.cpp  media_controller.cpp
windows-package/: README-Windows.txt  README.md
